<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">contact</string>
<string name="name">نام</string>
    <string name="h1">نام خود را وارد نمایید</string>
    <string name="h2">نام خانوادگی خود را وارد نمایید</string>
    <string name="h3">تلفن خود را وارد نمایید</string>
    <string name="fname">نام خانوادگی</string>
    <string name="tel">تلفن</string>
    <string name="add">ثبت مخاطب جدید</string>

</resources>
